# phosphor-host-ipmid

./: .build.sh  .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  MAINTAINERS  Makefile  Makefile.am  OWNERS  README  README.md  allowlist-filter.cpp  apphandler.C  apphandler.cpp  apphandler.h  apphandler.hpp  auth_algo.cpp  auth_algo.hpp  bootstrap.sh  chassishandler.C  chassishandler.cpp  chassishandler.h  chassishandler.hpp  comm_module.cpp  comm_module.hpp  command_table.cpp  command_table.hpp  configure.ac  crypt_algo.cpp  crypt_algo.hpp  dbus-impl.hpp  dbus.hpp  dcmihandler.C  dcmihandler.cpp  dcmihandler.h  dcmihandler.hpp  elog-errors.hpp  endian.hpp  entity_map_json.cpp  entity_map_json.hpp  (+141 more)
app/: channel.cpp  channel.hpp  meson.build  watchdog.cpp  watchdog.hpp  watchdog_service.cpp  watchdog_service.hpp
command/: channel_auth.cpp  channel_auth.hpp  guid.cpp  guid.hpp  open_session.cpp  open_session.hpp  payload_cmds.cpp  payload_cmds.hpp  rakp12.cpp  rakp12.hpp  rakp34.cpp  rakp34.hpp  session_cmds.cpp  session_cmds.hpp  sol_cmds.cpp  sol_cmds.hpp
configs/: fru-properties.json  fru-read.json  inventory-sensor.json  sensor.json
dbus-sdr/: ipmi_to_redfish_hooks.cpp  me_to_redfish_hooks.cpp  meson.build  sdrutils.cpp  sensorcommands.cpp  sensorcommands_utils.cpp  sensorutils.cpp  storagecommands.cpp  storagecommands_utils.cpp
docs/: Commands-cheatsheet.md  configuration.md  contributing.md  ipmi-design-phase1.md  testing.md  (+3 more)
include/: Makefile.am  meson.build
include/dbus-sdr/: ipmi_to_redfish_hooks.hpp  me_to_redfish_hooks.hpp  sdrutils.hpp  sensorcommands.hpp  sensorutils.hpp  storagecommands.hpp
include/ipmid/: api-types.hpp  api.h  api.hpp  filter.hpp  fru_map_json.hpp  handler.hpp  helpers.hpp  iana.hpp  message.hpp  oemrouter.hpp  registration.hpp  sdrutils.hpp  sensorutils.hpp  sessiondef.hpp  sessionhelper.hpp  types.hpp  utility.hpp  utils.hpp
include/ipmid-host/: cmd.hpp
include/ipmid/message/: pack.hpp  types.hpp  unpack.hpp
libipmid/: Makefile.am  entity_map_json.cpp  meson.build  oemopenbmc.hpp  oemrouter.hpp  sdbus-asio.cpp  signals.cpp  systemintf-sdbus.cpp  utils.cpp
libipmid-host/: Makefile.am  cmd.hpp  meson.build
oem/: meson.build
oem/arm/: apphandler.cpp  meson.build
oem/example/: apphandler.cpp  meson.build
oem/nvidia/: biosconfigcommands.cpp  bootstrap-credentials-oem-cmds.cpp  meson.build  oemcommands.hpp  sbmr-oem.cpp
scripts/: channel_gen.py  deviceid-example.yaml  deviceid.py  deviceid.yaml  deviceid_hardcoded.py  entity-example.md  entity-example.yaml  entity_gen.py  example.yaml  fru-read-bmc-example.yaml  fru-read-example.yaml  fru-read-nonhost-example.yaml  fru_gen.py  inventory-sensor-example.yaml  inventory-sensor.py  inventorysensor.cpp.mako  inventorysensor.mako.cpp  meson.build  readfru.cpp.mako  readfru.mako.cpp  sample-deviceid-hardcoded.yaml  sensor-example.yaml  sensor-gen.cpp  sensor.yaml  sensor_gen.py  writechannel.mako.cpp  writeentity.mako.cpp  writefru.mako.cpp  writesensor.cpp.mako  writesensor.mako.cpp
softoff/: Makefile  Makefile.am  Makefile.in  Makefile.interfaces  configure.ac  elog-errors-SoftOffHost.hpp  elog-gen-softoff.hpp  mainapp.cpp  meson.build  softoff.cpp  softoff.hpp  timer.cpp  timer.hpp  xyz.openbmc_project.Ipmi.Internal.SoftPowerOff.cpp
softoff/.deps/: phosphor_softpoweroff-mainapp.Po  phosphor_softpoweroff-softoff.Po  phosphor_softpoweroff-timer.Po  timer.Po
softoff/test/: Makefile  Makefile.am  Makefile.in  utest.cpp
softoff/test/.deps/: utest-utest.Po
softoff/test/WORKING_GTEST/: :w!  Makefile  utest  utest.cpp
softoff/xyz/openbmc_project/Ipmi/Internal/: server.cpp
softoff/xyz/openbmc_project/Ipmi/Internal/.deps/: phosphor_softpoweroff-server.Po
softoff/xyz/openbmc_project/Ipmi/Internal/SoftPowerOff/: server.hpp
test/: Makefile.am  cipher.cpp  ciphersuite_unittest.cpp  cs_privilege_levels.json  entitymap_json_unittest.cpp  fru_build_area_data_unittest.cpp  inventory-sensor-gen.cpp  ipmid-router-test.cpp  ipmid-server-test.cpp  ipmid-test-utils.cpp  ipmid-test-utils.hpp  meson.build  oemrouter_unittest.cpp  sample_unittest.cpp  sensorhandler_unittest.cpp  test-main.cpp
test/dbus-sdr/: sensorcommands_unittest.cpp
test/integration/: Makefile.am  README.md  ipmid_test.cpp  ipmid_test.hpp  itest_app.cpp  itest_sensor.cpp  itest_transport.cpp
test/integration/common/: integration_test.cpp  integration_test.hpp  mapperd_manager.cpp  mapperd_manager.hpp
test/integration/common/services/: bmc_state.cpp  bmc_state.hpp  networkd.cpp  networkd.hpp  restriction_mode.cpp  restriction_mode.hpp  sensor_server.cpp  sensor_server.hpp  user_manager.cpp  user_manager.hpp
test/integration/conf/: dev_id.json
test/message/: pack.cpp  payload.cpp  unpack.cpp
test/session/: closesession_unittest.cpp
transport/rmcpbridge/: .clang-tidy  .gitignore  README.md  auth_algo.cpp  auth_algo.hpp  comm_module.cpp  command_table.cpp  command_table.hpp  crypt_algo.cpp  integrity_algo.cpp  integrity_algo.hpp  main.cpp  meson.build  message_handler.hpp  message_parsers.hpp  rmcpbridge@.service.in  rmcpbridge@.socket  sd_event_loop.cpp  sessions_manager.cpp  socket_channel.hpp  sol_module.cpp
transport/rmcpbridge/command/: channel_auth.cpp  guid.cpp  rakp12.cpp  rakp34.hpp  session_cmds.cpp  sol_cmds.hpp
transport/rmcpbridge/sol/: sol_context.cpp  sol_context.hpp  sol_manager.cpp
transport/rmcpbridge/subprojects/: googletest.wrap
transport/rmcpbridge/test/: cipher.cpp  meson.build
transport/serialbridge/: meson.build  serialbridge@.service.in  serialbridged.cpp  serialcmd.cpp  serialcmd.hpp
transport/serialbridge/test/: meson.build  serial_unittest.cpp
user_channel/: Makefile.am  channel_layer.cpp  channel_layer.hpp  channel_mgmt.cpp  channel_mgmt.hpp  channelcommands.cpp  channelcommands.hpp  cipher_mgmt.cpp  cipher_mgmt.hpp  file.hpp  meson.build  passwd_mgr.cpp  passwd_mgr.hpp  shadowlock.hpp  user_layer.cpp  user_layer.hpp  user_mgmt.cpp  user_mgmt.hpp  usercommands.cpp  usercommands.hpp
xyz/openbmc_project/Ipmi/Internal/SoftPowerOff/: meson.build
(+52 files in other folders)
